# magellium-hrwsi

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.dev.yml
docker/init_database/: 0_init_database_set_database.sql  1_init_database_triggering_conditions.sql  2_init_database_processing_tasks.sql  3_init_database_products.sql  4_init_database_utils.sql  5_init_database_system_params.sql  6_init_awic_user.sql  7_init_database_indexes.sql  8_init_monitoring_database.sql  README.md  S2_tiles_proposal_GV.geojson  feed_tile_geometry.py
old/: archive_launcher.py  harvester.py  launcher.py  nrt_launcher.py  orchestrator.py  queries_and_constants.py  triggerer.py
src/magellium/: scheduler.py
src/magellium/hrwsi/system/common/: logger.py  modes.py  states.py
src/magellium/hrwsi/system/core/: docker_images.py  entities.py  flavours.py  nomad_job_dispatches.py  processing_levels.py  processing_routine.py  processing_status.py  processing_status_workflows.py  processing_task.py  processing_task_to_nomad_job_assignments.py  products.py  products_types.py  raster_types.py  run_modes.py  satellites.py  sentinel_tiles.py  tile_to_validation_assignments.py  trigger_validations.py  triggering_conditions.py
src/magellium/hrwsi/system/harvesters/: __main__.py
src/magellium/hrwsi/system/harvesters/application/: process_manager.py
src/magellium/hrwsi/system/launchers/application/: process_manager.py
src/magellium/hrwsi/system/launchers/configuration_file_generators/: README.md  (+12 more)
src/magellium/serviceproviders/: s3.py  vault.py
(+14 files in other folders)
